cabal-version:   3.0
name:            Agda-Python
version:         2.6.4.3
description:
  Python bindings for the Agda programming language and proof assistant.

license:         MIT
license-file:    LICENSE
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com
copyright:       (c) 2023 Wen Kokke
build-type:      Custom
extra-doc-files: CHANGELOG.md

custom-setup
  setup-depends:
    , base       >=4
    , Cabal      >=2.0.0.2
    , directory  >=1
    , filepath   >=1

common warnings
  ghc-options: -Wall

foreign-library _binding
  import:           warnings
  type:             native-shared

  -- 01-04-2023:
  -- Standalone builds appear to work with macOS builds of GHC
  if os(osx)
    options: standalone

  if os(windows)
    options:      standalone
    mod-def-file: src/agda/binding.def

  c-sources:        src/agda/binding_wrap.c
  hs-source-dirs:   src/agda vendor/agda/src/agda-mode
  other-modules:
    Binding
    Main
    Paths_Agda
    Paths_Agda_Python

  build-depends:
    , Agda       ==2.6.4.1
    , base       >=4.9.0.0 && <4.18
    , directory  >=1.2.6.2 && <1.4
    , filepath   >=1.4.1.0 && <1.5
    , process    >=1.4.2.0 && <1.7

  default-language: Haskell2010
