cabal-version:   3.0
name:            agda-python
version:         1.2.0
description:
  Python bindings for the Agda programming language and proof assistant.

license:         MIT
license-file:    LICENSE
author:          Wen Kokke
maintainer:      wenkokke@users.noreply.github.com
copyright:       (c) 2023 Wen Kokke
build-type:      Custom
extra-doc-files: CHANGELOG.md

custom-setup
  setup-depends:
    , base       >=4
    , Cabal      >=2.0.0.2
    , directory  >=1
    , filepath   >=1

common warnings
  ghc-options: -Wall

foreign-library _binding
  import:           warnings
  type:             native-shared

  -- 01-04-2023:
  -- Standalone builds appear to work with macOS builds of GHC
  if os(osx)
    options: standalone

  if os(windows)
    options:      standalone
    mod-def-file: src/agda/binding.def

  c-sources:        src/agda/binding_wrap.c
  hs-source-dirs:   src/agda
  other-modules:
    Binding
    Paths_agda_python

  build-depends:    base >=4.7 && <5
  default-language: Haskell2010
